--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ canvas {
     height: 50px;
     width: 50px;
     border-radius: 100px;
-    margin: 5px;
+    margin: 3px;
     border: none;
 }
 
 #color > button.active {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 #controls {
